# Slideguide

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
backend/db/: client.py
backend/llm/: __init__.py  client.py  discovery.py  models.py  providers.py  streaming.py  tool_compatibility.py  vision.py
backend/memory/: __init__.py  session_memory.py  student_progress.py
backend/models/: __init__.py  schemas.py
backend/monitoring/: __init__.py  health.py  logger.py  metrics.py
backend/parsers/: __init__.py  ocr.py  pdf_parser.py  pptx_parser.py
backend/rag/: __init__.py  evaluation.py  ingestion.py  retriever.py  vectorstore.py
backend/routes/: chat.py  settings.py
cli/: config.py  main.py
cli/commands/: config_cmd.py  db.py  services.py  setup.py  status.py  test.py
cli/utils/: console.py  env_builder.py  health.py  prereqs.py  processes.py  supabase.py  system.py
database/: schema.prisma
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ProgressBar.tsx  ProviderBanner.tsx  QuizCard.tsx  SlideNavigator.tsx  SlideUploader.tsx  SlideViewer.tsx  ThemeProvider.tsx
frontend/lib/: api.ts  store.ts  types.ts
supabase/: config.toml
tests/: test_agent.py  test_llm_client.py  test_parsers.py  test_rag.py  test_tools.py
(+11 files in other folders)
